// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly 1`] = `
<dl
  className="bpk-accordion"
>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 1
  </div>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 2
  </div>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 3
  </div>
</dl>
`;

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly even when multiple items are marked as initially expanded 1`] = `
<dl
  className="bpk-accordion"
>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 1
  </div>
  <div
    expanded={true}
    initiallyExpanded={true}
    onClick={[Function]}
  >
    Accordion Item 2
  </div>
  <div
    expanded={false}
    initiallyExpanded={true}
    onClick={[Function]}
  >
    Accordion Item 3
  </div>
</dl>
`;

exports[`withSingleItemAccordionState(BpkAccordion) should render correctly with custom initially expanded item 1`] = `
<dl
  className="bpk-accordion"
>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 1
  </div>
  <div
    expanded={true}
    initiallyExpanded={true}
    onClick={[Function]}
  >
    Accordion Item 2
  </div>
  <div
    expanded={false}
    onClick={[Function]}
  >
    Accordion Item 3
  </div>
</dl>
`;
